[project]
name = "resource-managment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.28.0,<0.29.0",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.2",
    "pytest>=9.0.3",
]
experiments = [
    "ipykernel>=7.2.0",
    "moviepy>=2.2.1",
    "stable-baselines3[extra]>=2.3.2",
    "wandb>=0.25.1",
]
